syntax = "proto3";
package proto;

option go_package="github.com/raito-io/cli/base/util/plugin";

// PluginInfo represents the information about a plugin.
message PluginInfo {
  string name = 1;
  string description = 2;
  Version version = 3;
  repeated ParameterInfo parameters = 4;
}

// Version contains semantic versioning information of the plugin
message Version {
  int32 Major = 1;
  int32 Minor = 2;
  int32 Maintenance = 3;
}

// ParameterInfo contains the information about a parameter.
// This is used to inform the CLI user what command-line parameters are expected explicitly for this target (plugin).
message ParameterInfo {
  string name = 1;
  string description = 2;
  bool mandatory = 3;
}

message empty{}

service Info {
  rpc getInfo(empty) returns (PluginInfo);
}